注册前端页面

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>404 - {{lay.base.name}}</title>
+<title>404 - 博士直通车</title>
 <%- include('./link.ejs') %>
 </head>
 <body>
