--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,12 +1,12 @@
 
 <div class="footer">
-  <p><a href="http://fly.layui.com/">Fly社区</a> 2016 &copy; <a href="http://www.layui.com/">layui.com</a></p>
+  <p><a href="#">博士直通车</a> 2017 &copy; <a href="#">bsztc.com</a></p>
   <p>
-    <a href="http://fly.layui.com/auth/get" target="_blank">产品授权</a>
-    <a href="http://fly.layui.com/jie/3147.html" target="_blank">VIP说明</a>
-    <a href="http://www.layui.com/" target="_blank">商务合作</a>
-    <a href="http://weibo.com/SentsinXu" target="_blank" rel="nofollow">微博</a>
-    <a href="http://fly.layui.com/jie/2461.html" target="_blank">微信公众号</a>
+    <a href="#" target="_blank">产品授权</a>
+    <a href="#" target="_blank">VIP说明</a>
+    <a href="#" target="_blank">商务合作</a>
+    <a href="#" target="_blank" rel="nofollow">微博</a>
+    <a href="#" target="_blank">微信公众号</a>
   </p>
 </div>
 
