--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,12 +1,12 @@
 <div class="header">
   <div class="main">
-    <a class="logo" href="/" title="Fly">博士直通车</a>
+    <a class="logo" href="/" title="博士直通车">博士直通车</a>
     <div class="nav">
       <a class="nav-this" href="jie/index.html">
         <i class="iconfont icon-wenda"></i>问答
       </a>
       <a href="http://www.layui.com/" target="_blank">
-        <i class="iconfont icon-ui"></i>框架
+        <i class="iconfont icon-ui"></i>智库
       </a>
     </div>
 
