要开始登录功能了，激动

--- a/views/users/forget.ejs
+++ b/views/users/forget.ejs
@@ -9,11 +9,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="format-detection" content="telephone=no">
 <title>{{title}} - {{lay.base.name}}</title>
-<%- include("./link.ejs") %>
+<%- include("../link.ejs") %>
 </head>
 <body>
 
-<%- include("./header.ejs") %>
+<%- include("../header.ejs") %>
 
 <div class="main layui-clear">
   <h2 class="page-title">{{title}}</h2>
@@ -85,7 +85,7 @@
   {{# } }}
 </div>
 
-<%- include("./footer") %>
+<%- include("../footer.ejs") %>
 
 </body>
 </html>
