--- a/views/users/reg.ejs
+++ b/views/users/reg.ejs
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>注册 - {{lay.base.name}}</title>
-<%- include("./link") %>
+<%- include("../link.ejs") %>
 </head>
 <body>
 
-<%- include("./header.ejs") %>
+<%- include("../header.ejs") %>
 
 <div class="main layui-clear">
   <h2 class="page-title">注册</h2>
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<%- include("./footer") %>
+<%- include("../footer.ejs") %>
 
 </body>
 </html>
