--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -10,7 +10,7 @@
   </p>
 </div>
 
-<script src="/layui/layui.js"></script>
+<script src="/res/layui/layui.js"></script>
 <script>
 layui.cache.page = '';
 layui.cache.user = {
