--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,10 +2,10 @@
   <div class="main">
     <a class="logo" href="/" title="博士直通车">博士直通车</a>
     <div class="nav">
-      <a class="nav-this" href="jie/index.html">
+      <a class="nav-this" href="/topic">
         <i class="iconfont icon-wenda"></i>问答
       </a>
-      <a href="http://www.layui.com/" target="_blank">
+      <a href="/users" target="_blank">
         <i class="iconfont icon-ui"></i>智库
       </a>
     </div>
