--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,20 +5,33 @@
       <a class="nav-this" href="/topic">
         <i class="iconfont icon-wenda"></i>问答
       </a>
-      <a href="/users" target="_blank">
+      <a href="/user" target="_blank">
         <i class="iconfont icon-ui"></i>智库
       </a>
     </div>
 
     <div class="nav-user">
       <!-- 未登入状态 -->
-      <a class="unlogin" href="user/login.html"><i class="iconfont icon-touxiang"></i></a>
-      <span><a href="/users/login">登入</a><a href="/users/reg">注册</a></span>
-      <p class="out-login">
-        <a href="" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" class="iconfont icon-qq" title="QQ登入"></a>
-        <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" class="iconfont icon-weibo" title="微博登入"></a>
-      </p>
 
+
+      <% if(!user) { %>
+        <a class="unlogin" href="user/login.html"><i class="iconfont icon-touxiang"></i></a>
+        <span><a href="/users/login">登入</a><a href="/users/reg">注册</a></span>
+        <p class="out-login">
+          <a href="" onclick="layer.msg('正在通过QQ登入', {icon:16, shade: 0.1, time:0})" class="iconfont icon-qq" title="QQ登入"></a>
+          <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" class="iconfont icon-weibo" title="微博登入"></a>
+        </p>
+      <% } else { %>
+        <a class="avatar" href="users/index.html">
+          <img src="http://tp4.sinaimg.cn/1345566427/180/5730976522/0">
+          <cite><%= user %></cite>
+          <i>VIP2</i>
+        </a>
+        <div class="nav">
+          <a href="/users/set"><i class="iconfont icon-shezhi"></i>设置</a>
+          <a href="/users/logout"><i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退了</a>
+        </div>
+      <% } %>
       <!-- 登入后的状态 -->
       <!--
       <a class="avatar" href="user/index.html">
