--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>博士直通车</title>
+  <title><%= title %></title>
   <%- include('./meta.ejs') %>
   <%- include('./link.ejs') %>
 </head>
