--- a/views/users/reg.ejs
+++ b/views/users/reg.ejs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>注册 - {{lay.base.name}}</title>
+<title><%= title %></title>
 <%- include("../link.ejs") %>
 </head>
 <body>
@@ -15,18 +15,17 @@
   <div class="layui-form layui-form-pane">
     <form method="post">
       <div class="layui-form-item">
-        <label for="L_email" class="layui-form-label">邮箱</label>
+        <label for="L_phone" class="layui-form-label">手机号</label>
         <div class="layui-input-inline">
-          <input type="text" id="L_email" name="email" required lay-verify="email" autocomplete="off" class="layui-input">
+          <input type="tel" id="L_phone" name="phone" required lay-verify="phone" autocomplete="off" class="layui-input">
         </div>
-        <div class="layui-form-mid layui-word-aux">将会成为您唯一的登入名</div>
       </div>
-      <div class="layui-form-item">
+      <!-- <div class="layui-form-item">
         <label for="L_username" class="layui-form-label">昵称</label>
         <div class="layui-input-inline">
           <input type="text" id="L_username" name="username" required lay-verify="required" autocomplete="off" class="layui-input">
         </div>
-      </div>
+      </div> -->
       <div class="layui-form-item">
         <label for="L_pass" class="layui-form-label">密码</label>
         <div class="layui-input-inline">
@@ -41,16 +40,15 @@
         </div>
       </div>
       <div class="layui-form-item">
-        <label for="L_vercode" class="layui-form-label">人类验证</label>
+        <label for="L_vercode" class="layui-form-label">验证码</label>
         <div class="layui-input-inline">
-          <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请回答后面的问题" autocomplete="off" class="layui-input">
+          <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请输入收到的验证码" autocomplete="off" class="layui-input">
         </div>
-        <div class="layui-form-mid">
-          <span style="color: #c00;">{{d.vercode}}</span>
-        </div>
+        <a id="get_vercode" class="layui-btn layui-btn-primary">获取短信验证码</a>
+        <button class="layui-btn layui-btn-disabled" id="J_resetCode" style="display:none;"><span id="J_second">60</span>秒后重发</button>
       </div>
       <div class="layui-form-item">
-        <button class="layui-btn" lay-filter="*" lay-submit>立即注册</button>
+        <a id="reg" class="layui-btn" lay-filter="*">立即注册</a>
       </div>
       <div class="layui-form-item fly-form-app">
         <span>或者直接使用社交账号快捷注册</span>
@@ -62,6 +60,61 @@
 </div>
 
 <%- include("../footer.ejs") %>
+
+<script>
+  layui.use(['jquery','layer'], function(){
+    var $ = layui.jquery;
+
+    $('#get_vercode').click(function() {
+      $.post(
+        "/users/get_vercode",
+        {
+          phone: $("#L_phone").val()
+        },
+        function(data, status){
+          if(data=='success'){
+            //倒数60s
+            $('#get_vercode').hide();
+          	$('#J_second').html('60');
+          	$('#J_resetCode').show();
+          	var second = 60;
+          	var timer = null;
+          	timer = setInterval(function(){
+          		second -= 1;
+          		if(second >0 ){
+          			$('#J_second').html(second);
+          		}else{
+          			clearInterval(timer);
+          			$('#get_vercode').show();
+          			$('#J_resetCode').hide();
+          		}
+          	},1000);
+            return ;
+          }else{
+            layer.msg(data);
+          }
+        }
+      )
+    });
+
+    $("#reg").click(function(){
+      $.post(
+        "/users/reg",
+        {
+          phone: $("#L_phone").val(),
+          vercode: $("#L_vercode").val()
+        },
+        function(data, status){
+          if(data=='success'){
+            window.location.href="/topic";
+          }else{
+            layer.msg(data);
+          }
+        }
+      )
+    });
+  });
+</script>
 
 </body>
 </html>
