--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,1 +1,104 @@
-<h1>hello <h1>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<title><%= title %></title>
+<%- include("../link.ejs") %>
+</head>
+<body>
+
+<%- include("../header.ejs") %>
+
+<div class="main layui-clear">
+
+  <h2 class="page-title">用心中心</h2>
+
+  <div class="wrap">
+    <div class="content">
+
+      <!-- {{# if(user.activate == 0){ }}
+      <div class="fly-msg">您的邮箱尚未验证，这比较影响您的帐号安全，<a href="/user/activate/">立即去激活？</a></div>
+      {{# } }} -->
+
+      <div class="fly-tab user-tab">
+        <span id="LAY-mine">
+          <a href="javascript:;" class="tab-this" type="mine-jie">我的求解（<cite>0</cite>）</a>
+          <a href="/user/message/">我的消息</a>
+          <a href="/user/message/">我的智库</a>
+          <a href="/users/home/{{168*user.id}}/">我的主页</a>
+        </span>
+      </div>
+      <div class="user-mine">
+        <ul class="mine-view jie-row" style="display:block;"></ul>
+      </div>
+      <div id="LAY-page"></div>
+    </div>
+  </div>
+
+  <div class="edge">
+    <div class="user-about">
+      <a href="http://fly.layui.com/user/set/#avatar" title="修改头像">
+        <img class="user-avatar" src=<%= avatar %>>
+      </a>
+      <p>
+        <span style="color:#333"><%= user %></span>
+
+        <span style="color: #FF7200;"><%= identity %></span>
+
+      </p>
+      <p>
+        <span>加入时间：<%= jointime %></span>
+      </p>
+      <p>
+        <span>城市：<%= city %></span>
+        <span>
+        性别：
+        <% if(sex==1){ %>
+        男
+        <% }else{ %>
+          女
+          <% } %>
+        </span>
+
+      </p>
+      <p>
+        <span></span>
+
+      </p>
+
+      <div class="user-looklog" style="padding-bottom:200px;">
+        <h3>最近访客</h3>
+        <span>
+          <a href="/u/168">
+            <img src="http://fly.layui.com/avatar/168.jpg">
+            <cite>贤心</cite>
+            <i>刚刚</i>
+          </a>
+          <a href="/u/336">
+            <img src="http://res.layui.com/images/fly/avatar/00.jpg">
+            <cite>Fly官方</cite>
+            <i>5分钟前</i>
+          </a>
+          <a href="/u/26880">
+            <img src="http://res.layui.com/images/fly/avatar/5.jpg">
+            <cite>小付</cite>
+            <i>1小时前</i>
+          </a>
+          <a href="/u/11928">
+            <img src="http://fly.layui.com/avatar/11928.jpg">
+            <cite>第一把菜刀</cite>
+            <i>3天前</i>
+          </a>
+
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%- include("../footer.ejs") %>
+
+</body>
+</html>
