--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -31,7 +31,7 @@
       <div class="layui-form-item">
         <a id="submit" class="layui-btn" lay-filter="test">立即登录</a>
         <span style="padding-left:20px;">
-          <a href="/user/forget">忘记密码？</a>
+          <a href="/users/forget">忘记密码？</a>
         </span>
       </div>
       <div class="layui-form-item fly-form-app">
