--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,27 +22,17 @@
           <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" class="iconfont icon-weibo" title="微博登入"></a>
         </p>
       <% } else { %>
-        <a class="avatar" href="users/index.html">
-          <img src="http://tp4.sinaimg.cn/1345566427/180/5730976522/0">
+        <a class="avatar" href="users/index">
+          <img src= <%= avatar %> >
           <cite><%= user %></cite>
-          <i>VIP2</i>
+          <i><%= identity %></i>
         </a>
         <div class="nav">
           <a href="/users/set"><i class="iconfont icon-shezhi"></i>设置</a>
           <a href="/users/logout"><i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退了</a>
         </div>
       <% } %>
-      <!-- 登入后的状态 -->
-      <!--
-      <a class="avatar" href="user/index.html">
-        <img src="http://tp4.sinaimg.cn/1345566427/180/5730976522/0">
-        <cite>贤心</cite>
-        <i>VIP2</i>
-      </a>
-      <div class="nav">
-        <a href="/user/set/"><i class="iconfont icon-shezhi"></i>设置</a>
-        <a href="/user/logout/"><i class="iconfont icon-tuichu" style="top: 0; font-size: 22px;"></i>退了</a>
-      </div> -->
+
 
     </div>
   </div>
