--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -9,7 +9,7 @@
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>{{ lay.base.title }}</title>
+<title><%= title %></title>
 <%- include("../link.ejs") %>
 </head>
 <body>
