添加一些页面

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -12,7 +12,7 @@
 
 <script src="/res/layui/layui.js"></script>
 <script>
-layui.cache.page = '';
+layui.cache.page = 'user';
 layui.cache.user = {
   username: '游客'
   ,uid: -1
@@ -21,7 +21,7 @@ layui.cache.user = {
   ,sex: '男'
 };
 layui.config({
-  version: "1.0.7"
+  version: "1.0.0"
   ,base: '/res/mods/'
 }).extend({
   fly: 'index'
