--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
       <a class="nav-this" href="/topic">
         <i class="iconfont icon-wenda"></i>问答
       </a>
-      <a href="/user" target="_blank">
+      <a href="/wisdom">
         <i class="iconfont icon-ui"></i>智库
       </a>
     </div>
@@ -22,7 +22,7 @@
           <a href="" onclick="layer.msg('正在通过微博登入', {icon:16, shade: 0.1, time:0})" class="iconfont icon-weibo" title="微博登入"></a>
         </p>
       <% } else { %>
-        <a class="avatar" href="users/index">
+        <a class="avatar" href="/users/index">
           <img src= <%= avatar %> >
           <cite><%= user %></cite>
           <i><%= identity %></i>
