个人基本资料

--- a/views/users/reg.ejs
+++ b/views/users/reg.ejs
@@ -102,11 +102,12 @@
     $("#reg").click(function(){
       $.post(
         "/users/reg",
-        {    
+        {
           vercode: $("#L_vercode").val()
         },
         function(data, status){
           if(data=='success'){
+            alert("注册成功");
             window.location.href="/topic";
           }else{
             layer.msg(data);
